--- a/src/scss/_section.scss
+++ b/src/scss/_section.scss
@@ -9,14 +9,14 @@
     }
 
     &__heading {
-        margin: 29px 0 26px;
+        margin: 16px 0;
         font-weight: 800;
         font-size: clamp(2.5rem, 3.5vw + 1rem, 3.5rem);
         line-height: 100%;
     }
 
     .button-link {
-        margin-top: 27px;
+        margin-top: 22px;
     }
 
     @media only screen and (min-width: 1024px) {
@@ -25,7 +25,7 @@
         align-items: start;
         grid-template-columns: 1fr 1fr;
         grid-template-rows: 300px auto 1fr;
-        row-gap: 36px;
+        row-gap: 35px;
         column-gap: var(--desktop-col-gap);
 
         picture {
@@ -47,42 +47,53 @@
         p {
             grid-row: 2;
             grid-column: 2;
+            margin-top: -1px;
         }
 
         .button-link {
             grid-row: 3;
             grid-column: 2;
-            margin: 0;
+            margin: -6px 0 0;
         }
     }
 }
 
 .aside-new {
-    padding: 28px 22px 31px;
-    margin-bottom: 64px;
+    margin-bottom: 63px;
+    padding: 28px 20px 24px 22px;
 
     h2 {
-        margin-bottom: 42px;
-        font-size: 2rem;
+        margin-bottom: 35px;
+        font-size: clamp(2.188rem, 2vw + 1rem, 2.438rem);
     }
 
     @media only screen and (min-width: 768px) {
-        padding: 40px 26px;
+        margin-bottom: 78px;
+        padding: 35px 22px;
+
+        h2 {
+            margin-bottom: 40px;
+        }
+
+        h3 {
+            letter-spacing: 0.04rem;
+        }
     }
-}
 
-.secondary-featured {
-    margin-bottom: 81px;
-
-    @media only screen and (min-width: 768px) {
-        grid-column: 1 / -1;
+    @media only screen and (min-width: 1024px) {
+        margin-bottom: 72px;
+        padding: 40px 24px 33px;
     }
 }
 
 #new-articles-container {
     display: flex;
     flex-direction: column;
-    gap: 35px;
+    gap: 29px;
+
+    @media only screen and (min-width: 1024px) {
+        gap: 30px;
+    }
 }
 
 .new-article {
@@ -92,7 +103,7 @@
         width: 100%;
         height: 1px;
         background-color: var(--color-dark-00);
-        margin-bottom: 35px;
+        margin-bottom: 29px;
     }
 
     &:first-child {
@@ -114,7 +125,21 @@
     }
 
     h3 {
-        margin-bottom: 16px;
+        margin-bottom: 7px;
+    }
+
+    @media only screen and (min-width: 1024px) {
+        &::before {
+            margin-bottom: 31px;
+        }
+    }
+}
+
+.secondary-featured {
+    margin-bottom: 78px;
+
+    @media only screen and (min-width: 768px) {
+        grid-column: 1 / -1;
     }
 }
 
@@ -129,7 +154,8 @@
     li:before {
         content: "0" counter(item);
         counter-increment: item;
-        font-size: 2rem;
+        margin-top: 4px;
+        font-size: 2.1rem;
         font-weight: 700;
         color: var(--color-primary);
         display: inline;
@@ -144,36 +170,60 @@
 
 .secondary-article {
     display: grid;
-    grid-template-columns: 100px 1fr;
-    grid-template-rows: repeat(3, auto);
+    grid-template-columns: minmax(auto, 200px);
+    grid-template-rows: 150px repeat(3, auto);
+    justify-content: center;
     column-gap: var(--mobile-col-gap);
-    row-gap: 20px;
+    row-gap: 14px;
 
     > * {
         height: fit-content;
     }
 
     &::before {
-        grid-row: 1;
-        grid-column: 2;
+        grid-row: 2;
     }
 
     img {
-        grid-row: 1 / -1;
-        grid-column: 1;
+        grid-row: 1;
         width: 100%;
         height: 100%;
         object-fit: cover;
     }
 
     h3 {
-        grid-row: 2;
-        grid-column: 2;
+        grid-row: 3;
+        letter-spacing: 0.01rem;
     }
 
     p {
-        grid-row: 3;
-        grid-column: 2;
+        grid-row: 4;
+        margin-top: -8px;
+    }
+
+    @media only screen and (min-width: 375px) {
+        grid-template-columns: 100px 1fr;
+        grid-template-rows: repeat(3, auto);
+
+        &::before {
+            grid-row: 1;
+            grid-column: 2;
+        }
+
+        img {
+            grid-row: 1 / -1;
+            grid-column: 1;
+        }
+
+        h3 {
+            grid-row: 2;
+            grid-column: 2;
+        }
+
+        p {
+            grid-row: 3;
+            grid-column: 2;
+        }
     }
 
     @media only screen and (min-width: 768px) {
@@ -182,5 +232,10 @@
 
     @media only screen and (min-width: 1024px) {
         width: 100%;
+        row-gap: 12px;
+
+        h3 {
+            letter-spacing: -0.03rem;
+        }
     }
 }
