--- a/src/scss/_utility.scss
+++ b/src/scss/_utility.scss
@@ -20,11 +20,11 @@
     background-color: var(--color-primary);
     color: var(--color-dark-01);
     text-transform: uppercase;
-    letter-spacing: 0.23rem;
+    letter-spacing: 0.27rem;
     font-weight: 700;
     font-size: 0.875rem;
     line-height: 175%;
-    padding: 19px 32px;
+    padding: 12px 31px 10px;
     display: block;
     width: fit-content;
     border-bottom-width: 3px;
